--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,8 @@
  */
  .swal2-popup {
   background: rgba(34,34,34,0.63) !important;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
   border-radius: 15px !important;
 }
 .moreSelect {
@@ -43,7 +43,7 @@
   border: none;
   border-radius: 10px;
   margin: auto;
-  transition: all 400ms;
+  transition: all 400ms cubic-bezier(.25,0,0,1);
   outline:none;
   padding: 0;
   margin: 0;
@@ -56,7 +56,7 @@
   border: none;
   border-radius: 10px;
   margin: auto;
-  transition: all 400ms;
+  transition: all 400ms cubic-bezier(.25,0,0,1);
   outline:none;
   padding: 0;
   margin: 0;
@@ -72,7 +72,7 @@
   background-color: #ffffff;
   border-radius: 40px; 
   box-shadow: 0px 0px 0px green;
-  transition: all 400ms;
+  transition: all 400ms cubic-bezier(.25,0,0,1);
   outline:none
 }
 .biginput[type="range"]::-moz-range-thumb {
@@ -84,7 +84,7 @@
   background-color: #ffffff;
   border-radius: 30px;
   box-shadow: 0px 0px 0px green;
-  transition: all 400ms;
+  transition: all 400ms cubic-bezier(.25,0,0,1);
   outline:none
 }
 
@@ -373,7 +373,7 @@ textarea {
   transform-origin: top;
   right: 8px;
   display:none;
-  animation: reveal 350ms ease-in;
+  animation: reveal 350ms cubic-bezier(.25,0,0,1);
   background: rgba(24,24,24,0.4);
   padding:8px;
 
@@ -407,9 +407,9 @@ Desktop
 }
 #NavUI {
   position:fixed;
-  animation: lUI 350ms ease-in;
+  animation: lUI 350ms cubic-bezier(.25,0,0,1);
   width: 300px;
-  transition: width 350ms, height 350ms, top 350ms;
+  transition: width 350ms cubic-bezier(.25,0,0,1), height 350ms cubic-bezier(.25,0,0,1), top 350ms cubic-bezier(.25,0,0,1);
   height: 100%;
   background: #333;
   z-index: 100;
@@ -422,7 +422,7 @@ Desktop
 #MainUI {
 
 
-  transition: transform 350ms ease-in-out;
+  transition: transform 350ms cubic-bezier(.25,0,0,1);
   position: fixed;
   top: 0px;
   right: 0px;
@@ -458,8 +458,8 @@ div,input {
   width:100%;
   z-index:5;
   background: rgba(34,34,34,0.75);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
   border-bottom: solid 1px #333;;
   padding: 8px 16px;
 }
@@ -488,13 +488,13 @@ border-bottom: solid 1px #333;
 }
 #EmbedPlace {
   display: NONE;
-  animation: viewIn 350ms ease-out;
+  animation: viewIn 350ms cubic-bezier(.25,0,0,1);
 }
 #CheckEmbeds {
   width: 100%;
 }
 #AllSongs, #Sublists {
-  animation: sup 350ms;
+  animation: sup 350ms cubic-bezier(.25,0,0,1);
   animation-delay: 100ms;
 }
 .songMore {
@@ -526,7 +526,7 @@ border-bottom: solid 1px #333;
 }
 .view {
   display: none;
-  animation: viewIn 350ms ease-in-out;
+  animation: viewIn 350ms cubic-bezier(.25,0,0,1);
   height: 100%;
   overflow-y:scroll;
 }
@@ -666,7 +666,7 @@ z-index:99;
 #SearchPlace {
   display: none;
   padding-bottom: 100px;
-  animation: sup 350ms;
+  animation: sup 350ms cubic-bezier(.25,0,0,1);
 }
 #SearchHeader, .sss {
   display: none;
@@ -674,9 +674,20 @@ margin-top:16px;
 position: sticky;
 top:0px;
 left:0px;
-
-padding:12px;
-background: #333;
+line-height: 32px;
+padding: 8px 16px;
+-webkit-backdrop-filter: blur(15px);
+backdrop-filter: blur(15px);
+align-content: center;
+justify-content: space-between;
+background: rgba(51 51 51, 0.75);
+}
+button {
+  background-color: #333333;
+  color: white;
+  border-radius: 6px;
+  padding: 6px 12px;
+  border: none;
 }
 #SearchUI {
   position: fixed;
@@ -753,7 +764,7 @@ background: #333;
 #PlaylistViews {
   position: fixed;
   z-index:1;
-  transition: transform 350ms ease-in-out;
+  transition: transform 350ms cubic-bezier(.25,0,0,1);
   padding: 8px;
   width: 100%;
   height: 100%;
@@ -761,10 +772,10 @@ background: #333;
   padding-top: 100px;
 }
 #HomeSearch {
-  animation: sup 350ms;
+  animation: sup 350ms cubic-bezier(.25,0,0,1);
 }
 #loadout {
-  animation: loadStart 550ms;
+  animation: loadStart 550ms cubic-bezier(.25,0,0,1);
 }
 #PlayBar {
   display: flex;
@@ -810,8 +821,8 @@ background: #333;
   -ms-transform: translate(0, -50%);
   -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s cubic-bezier(.25,0,0,1);
+  transition: all 0.3s cubic-bezier(.25,0,0,1);
 }
 
 .switch-label:before {
@@ -876,7 +887,7 @@ background: #333;
   z-index: 110;
   transform: translateY(100%);
   background: black;
-  transition: transform 350ms ease-in-out;
+  transition: transform 350ms cubic-bezier(.25,0,0,1);
 }
 #SettingsView {
   z-index:112;
