--- a/css/main.css
+++ b/css/main.css
@@ -7,28 +7,55 @@
  * Kroc Camen, and the H5BP dev community and team.
  */
 .swal2-popup {
-  background: rgba(34, 34, 34, 0.63) !important;
-  backdrop-filter: blur(15px);
-  -webkit-backdrop-filter: blur(15px);
-  border-radius: 15px !important;
+  background: rgba(34, 34, 34) !important;
+ 
+  border-radius: 16px !important;
+  backdrop-filter: blur(15px) ;
+  -webkit-backdrop-filter: blur(15px) ;
 }
+ 
 .moreSelect {
-  margin-top: 8px;
+  margin-top: 4px;
   width: 100%;
   padding: 12px;
-  border-radius: 8px;
-  background: rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  background: #333333;
   color: white;
-  border: none;
+  border:  none;
 }
-#AddToPlaylistView {
+.moreSelect:first-of-type {
+  
+  border-radius: 12px 12px 6px 6px;
+}
+.swal2-container.swal2-backdrop-show {
+  backdrop-filter: blur(15px) ;
+  -webkit-backdrop-filter: blur(15px) ;
+}
+.moreSelect:last-of-type {
+  
+  border-radius: 6px 6px 12px 12px ;
+}
+#AddToPlaylistView > div , #SettingsView > div {
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  margin-bottom: auto;
+  padding: 16px;
+  background: rgba(34, 34, 34);
+  border-radius: 16px;
+}
+#AddToPlaylistView , #SettingsView {
   position: fixed;
   z-index: 104;
   top: 0px;
   left: 0px;
+  transition: backdrop-filter 350ms cubic-bezier(0.25,0,0,1), -webkit-backdrop-filter 350ms cubic-bezier(0.25,0,0,1);
   width: 100%;
+  padding: 16px;
   height: 100%;
-  background: #000;
+  background: rgba(0,0,0,.4);
+  backdrop-filter: blur(15px) ;
+  -webkit-backdrop-filter: blur(15px) ;
   display: none;
 }
 /* ==========================================================================
@@ -591,6 +618,7 @@ input {
   height: 300px;
   top: calc(40% - 150px);
   left: calc(25% - 150px);
+  transition: left 350ms cubic-bezier(.25, 0, 0, 1), top 350ms cubic-bezier(.25, 0, 0, 1) ;
   -webkit-box-shadow: 0px 2px 12px -2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 2px 12px -2px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 2px 12px -2px rgba(0, 0, 0, 0.75);
@@ -625,7 +653,7 @@ input {
  
 #FVLyricsView {
   position: fixed;
-  left: calc(50% + 100px);
+  left: calc(50% - 30px);
   top: calc(40% - 250px);
   width: 400px;
   height: 500px;
@@ -683,10 +711,15 @@ body {
   padding: 16px;
   display: none;
 }
+
 #FVHeads,
 #SVHeads {
   padding: 8px;
   display: flex;
+  transition: color 350ms cubic-bezier(.25,0,0,1);
+}
+#FVHeads > * {
+  transition: color 350ms cubic-bezier(.25,0,0,1);
 }
 #FVHeads button,
 #SVHeads button {
@@ -937,17 +970,17 @@ button {
 .selectorSelected {
   background: #999;
 }
-#FullView,
-#SettingsView {
+#FullView{
   position: fixed;
   left: 0px;
   top: 0px;
   width: 100%;
   height: 100%;
+  
   z-index: 110;
   transform: translateY(100%);
   background: black;
-  transition: transform 350ms cubic-bezier(0.25, 0, 0, 1);
+  transition: transform 350ms cubic-bezier(0.25, 0, 0, 1), background 350ms cubic-bezier(0.25, 0, 0, 1);
 }
 #SettingsView {
   z-index: 112;
