--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,77 @@
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
  * Kroc Camen, and the H5BP dev community and team.
  */
+ #LOADER {
+   position: fixed;
+   top: 0;left:0;width:100%;height:100%;
+   z-index: 10000;
+   background: rgba(24,24,24,0.6);
+   -webkit-backdrop-filter: blur(15px);
+   backdrop-filter: blur(15px);
+   transition: opacity 350ms ease-in-out;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+ #LoaderState {
+   text-align: center;
+ }
+ .lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: #fff;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
+}
+
 .swal2-popup {
   background: rgba(34, 34, 34) !important;
  
@@ -41,7 +112,7 @@
   margin: 0 auto;
   margin-bottom: auto;
   padding: 16px;
-  background: rgba(34, 34, 34);
+  background: rgb(34, 34, 34);
   border-radius: 16px;
 }
 #AddToPlaylistView , #SettingsView {
@@ -409,6 +480,9 @@ textarea {
   border-radius: 8px;
   min-height: 32px;
 }
+.NavName {
+  padding-left: 8px;
+}
 /*
 Desktop 
 */
@@ -419,6 +493,7 @@ Desktop
 #NavInr a {
   width: 100%;
   margin-bottom: 16px;
+  display: flex;
 }
 @keyframes lUI {
   from {
@@ -496,7 +571,8 @@ input {
   width: 280px;
   border-radius: 24px;
   color: #eee;
-  padding: 8px 12px;
+  padding: 4px 16px;
+  line-height: 32px;
   background: #333;
   border: none;
   outline: none;
@@ -523,8 +599,10 @@ input {
 #AllSongs,
 #Sublists {
   animation: sup 350ms cubic-bezier(0.25, 0, 0, 1);
-  animation-delay: 100ms;
+  
+ 
 }
+
 .songMore {
   border: none;
   background: none;
@@ -630,7 +708,7 @@ input {
   overflow-y: scroll;
 }
 .hideMobile {
-  display: none;
+  display: none !important;
 }
 #FVLyricsHideMobile {
   display: none;
@@ -1046,6 +1124,13 @@ Mobile
     position: static;
   }
   .hideMob {
-    display: none;
+    display: none !important;
+  }
+  #NavInr a {
+ 
+    display: block;
+  }
+  .NavName {
+    padding: 0px;
   }
 }
