--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
  * Kroc Camen, and the H5BP dev community and team.
  */
+ :root {
+   --lighter-btn: rgba(51,51,51,0.6);
+ }
  #LOADER {
    position: fixed;
    top: 0;left:0;width:100%;height:100%;
@@ -516,7 +519,10 @@ Desktop
     height 350ms cubic-bezier(0.25, 0, 0, 1),
     top 350ms cubic-bezier(0.25, 0, 0, 1);
   height: 100%;
-  background: #333;
+  background: linear-gradient(to bottom,
+  rgba(34,34,34,0.5),
+  rgba(34,34,34,1));
+ 
   z-index: 100;
 }
 #PlayBar {
@@ -559,10 +565,10 @@ input {
   position: fixed;
   width: 100%;
   z-index: 5;
-  background: rgba(34, 34, 34, 0.75);
+   
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
-  border-bottom: solid 1px #333;
+   
   padding: 8px 16px;
 }
 
@@ -573,7 +579,7 @@ input {
   color: #eee;
   padding: 4px 16px;
   line-height: 32px;
-  background: #333;
+  background: var(--lighter-btn);
   border: none;
   outline: none;
 }
@@ -587,7 +593,7 @@ input {
 .songList {
   display: flex;
   width: 100%;
-  border-bottom: solid 1px #333;
+  border-bottom: solid 1px var(--lighter-btn);
 }
 #EmbedPlace {
   display: NONE;
@@ -811,7 +817,7 @@ body {
   font-size: 14px;
   padding: 4px;
   background: #eee;
-  color: #333;
+  color: var(--lighter-btn);
   border-radius: 4px;
 }
 
@@ -870,7 +876,7 @@ button {
 .searchResult {
   overflow: auto;
   width: 100%;
-  border-top: solid 1px #333;
+  border-top: solid 1px var(--lighter-btn);
 }
 .aps {
   padding: none;
@@ -925,7 +931,7 @@ button {
   box-sizing: border-box;
   margin-bottom: 8px;
   display: inline-block;
-  background: #333;
+  background: var(--lighter-btn);
   border-radius: 4px;
   color: #eee;
   text-decoration: none;
@@ -937,7 +943,7 @@ button {
   padding: 8px;
   width: 100%;
   height: 100%;
-  background: #222;
+  background: rgba(34,34,34,0.6);
   padding-top: 100px;
 }
 #HomeSearch {
@@ -1046,6 +1052,11 @@ button {
 .selectorSelected {
   background: #999;
 }
+#MainUI {
+  background: linear-gradient(to bottom,
+  rgba(34,34,34,0.5),
+  rgba(34,34,34,1));
+}
 #FullView{
   position: fixed;
   left: 0px;
@@ -1075,7 +1086,7 @@ Mobile
   }
   #NavUI {
     bottom: 0px;
-    border-top: solid 1px #333;
+    border-top: solid 1px var(--lighter-btn);
     backdrop-filter: blur(15px) saturate(155%);
     -webkit-backdrop-filter: blur(18px) saturate(155%);
     background: rgba(40, 40, 40, 0.76);
